--- a/css/common.css
+++ b/css/common.css
@@ -66,3 +66,24 @@ i{font-style: normal;}
 .border-b-09f{border-bottom: 0.025rem solid #0096ff;}
 .border-b-e5{border-bottom: 0.025rem solid #e5e5e5;}
 .border-b-f99d53{border-bottom: 0.025rem solid #f99d53;}
+
+/*头部*/
+.title_search{
+	width: 18.75rem;
+	padding:0.375rem 0;
+}
+.title_search .go_back{
+	margin-top:0.25rem;
+}
+.title_search .go_back img{
+	width: 0.45rem;
+	height: 0.825rem;
+	position: relative;
+	right: -0.5rem;
+	z-index: 99;
+}
+.title_search p{
+	font-size: 0.85rem;
+	color: #fff;
+	margin-top: 0.175rem;
+}
