--- a/css/fenyelist.css
+++ b/css/fenyelist.css
@@ -1,20 +1,10 @@
-.title_search{
-	padding:0.375rem 0.625rem 0.375rem 0.5rem;
-}
-.title_search .go_back{
-	margin-top:0.25rem;
-}
-.title_search .go_back img{
-	width: 0.45rem;
-	height: 0.825rem;
-	padding-right: 0.5rem;
-}
 .search_gjc{
 	padding: 0.3rem 0 0.3rem 1.5rem;
 	border-radius: 1.0rem;
 	font-size: 0.65rem;
 	width: 13.0rem;
 	height: 0.8rem;
+	margin-left: 1.0rem;
 	outline: none;
 	background: url(../img/sousuo1.png) 0.5rem 0.3rem no-repeat;
 	background-size:0.75rem 0.8rem;
