--- a/css/storeinfo.css
+++ b/css/storeinfo.css
@@ -139,7 +139,6 @@
 }
 .two_tu img:nth-child(2),.two_tu img:nth-child(3){
 	width: 4.25rem;
-
 }
 .two_tu img:nth-child(2){
 	padding-right: 0.25rem;
@@ -147,7 +146,7 @@
 /*糖果图片*/
 .suger_tu img{
 	max-width: 100%;
-	margin:0;
+	margin-top: -0.25rem;
 	padding:0;
 }
 /*底部*/
